--- a/стр.5.html
+++ b/стр.5.html
@@ -129,7 +129,7 @@
       <div class="text">
         <p>
           <font face = "lucida sans unicode"><b>1. Выбор криптовалютной биржи </b></font>
-	<p align="justify">&nbsp;&nbsp;&nbsp;&nbsp;<font face = "arial">Первый шаг </font> — это выбор платформы, через которую вы будете совершать покупку. Криптовалютная биржа — это онлайн-сервис, где пользователи могут обменивать фиатные деньги (рубли, доллары, евро и т. д.) на цифровые активы, такие как Bitcoin или Ethereum.</p>
+	<p align="justify" style="text-indent: 30">&nbsp;&nbsp;&nbsp;&nbsp;<font face = "arial">Первый шаг </font> — это выбор платформы, через которую вы будете совершать покупку. Криптовалютная биржа — это онлайн-сервис, где пользователи могут обменивать фиатные деньги (рубли, доллары, евро и т. д.) на цифровые активы, такие как Bitcoin или Ethereum.</p>
 	Некоторые из самых популярных и надёжных бирж:
 
 	<p align="justify" style="text-indent: 30"><font face = "arial">Binance </font> – крупнейшая по объёму торгов криптобиржа в мире. Она предлагает одни из самых низких комиссий на рынке, а также широкий выбор криптовалют, инструментов и торговых пар. Подходит как новичкам, так и опытным трейдерам.</p>
@@ -138,7 +138,7 @@
 	<p align="justify" style="text-indent: 30"><font size = "2"> <b>Совет:</b> Перед регистрацией обязательно проверьте, доступна ли биржа в вашей стране и соответствует ли она вашему уровню подготовки.</font></p>
 	
 	<p align = "right"><font face = "lucida sans unicode"><b>2. Регистрация и верификация (KYC) </b></font></p>
-	<p align="justify">&nbsp;&nbsp;&nbsp;&nbsp;После выбора платформы нужно создать аккаунт. Обычно это делается с помощью электронной почты и пароля. Но для большинства бирж обязательно пройти процедуру верификации личности — так называемую KYC (Know Your Customer).</p>
+	<p align="justify" style="text-indent: 30">&nbsp;&nbsp;&nbsp;&nbsp;После выбора платформы нужно создать аккаунт. Обычно это делается с помощью электронной почты и пароля. Но для большинства бирж обязательно пройти процедуру верификации личности — так называемую KYC (Know Your Customer).</p>
 	Процесс включает:
 	<br><br>Загрузку документа, удостоверяющего личность (паспорт или водительское удостоверение).
 	<br><br>Селфи или видеоподтверждение.
@@ -146,7 +146,7 @@
 	<p align="justify" style="text-indent: 30">Это делается не только в целях безопасности, но и для соблюдения международных законов по борьбе с отмыванием денег и финансированием терроризма.</p>
 	
 	<font face = "lucida sans unicode"><b>3. Пополнение счёта </b></font>
-	<p align="justify">&nbsp;&nbsp;&nbsp;&nbsp; Перед тем как купить криптовалюту, нужно пополнить баланс биржевого счёта. Способы пополнения зависят от платформы и страны проживания, но чаще всего доступны:</p>
+	<p align="justify" style="text-indent: 30">&nbsp;&nbsp;&nbsp;&nbsp; Перед тем как купить криптовалюту, нужно пополнить баланс биржевого счёта. Способы пополнения зависят от платформы и страны проживания, но чаще всего доступны:</p>
 	Банковский перевод — самый надёжный и экономичный способ, хотя может занять 1–3 дня.
 	<br><br>Кредитная/дебетовая карта — быстрый метод, но с более высокой комиссией.
 	<br><br>Криптовалютный перевод — если у вас уже есть криптовалюта в другом кошельке, вы можете перевести её на биржу.
