--- a/стр.5.html
+++ b/стр.5.html
@@ -159,7 +159,7 @@
 	<p align="justify" style="text-indent: 30">Некоторые биржи также предлагают периодические покупки, когда криптовалюта приобретается автоматически по расписанию — это помогает усреднить цену покупки и снизить риски.</p>
 	
 	<font face = "lucida sans unicode"><b>5. Хранение криптовалюты </b></font>
-	<p align="justify" style="text-indent: 30">После покупки очень важно обеспечить безопасность своих активов. Криптовалюта может храниться как на бирже, так и вне её. Лучше всего выводить средства в личный кошелёк, особенно если вы планируете долгосрочное хранение.</p>
+	<p align="justify" style="text-indent: 30">&nbsp;&nbsp;&nbsp;&nbsp; После покупки очень важно обеспечить безопасность своих активов. Криптовалюта может храниться как на бирже, так и вне её. Лучше всего выводить средства в личный кошелёк, особенно если вы планируете долгосрочное хранение.</p>
 	Существует несколько видов криптокошельков:
 	
 	<br><br><font face = "arial">Горячие кошельки (Hot wallets)</font>
