--- a/стр.5.html
+++ b/стр.5.html
@@ -153,7 +153,7 @@
 	<br><br><b>Важно!:</b> всегда дважды проверяйте адрес кошелька и комиссию перед отправкой средств.
 	
 	<p align = "right"><font face = "lucida sans unicode"><b>4. Покупка криптовалюты </b></font></p>
-	<br>Когда счёт пополнен, можно переходить к покупке. Биржи предлагают разные типы ордеров:
+	<p align="justify" style="text-indent: 30">&nbsp;&nbsp;&nbsp;&nbsp;Когда счёт пополнен, можно переходить к покупке. Биржи предлагают разные типы ордеров:</p>
 	<p align="justify" style="text-indent: 30">Маркет-ордер (Market Order) – позволяет купить криптовалюту по текущей рыночной цене. Это самый быстрый и простой способ для новичков.</p>
 	<p align="justify" style="text-indent: 30">Лимит-ордер (Limit Order) – позволяет указать свою цену, по которой вы готовы купить актив. Сделка произойдёт, только если рынок достигнет указанной цены. Удобно для тех, кто хочет дождаться более выгодного курса.</p>
 	<p align="justify" style="text-indent: 30">Некоторые биржи также предлагают периодические покупки, когда криптовалюта приобретается автоматически по расписанию — это помогает усреднить цену покупки и снизить риски.</p>
